<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/txt_jeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:lineSpacingExtra="8sp"
        android:text="@string/nom_jeu"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_erreur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        tools:text="message erreur"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nom_joueur1"
            android:layout_margin="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nom_joueur1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nom_joueur2"
            android:layout_margin="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nom_joueur2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_commencer"
        android:theme="@style/Bouton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_commencer_partie" />
</LinearLayout>