<resources>
    <string name="app_name">Damier</string>
    <string name="nom_jeu">Super Jeu de Dames!</string>
    <string name="msg_erreur_nom_vide">Un joueur ne doit pas avoir un nom vide</string>
    <string name="msg_erreur_nom_identique">Les deux noms sont identiques</string>
    <string name="txt_nom_joueur1">Entrer le nom du premier joueur</string>
    <string name="txt_nom_joueur2">Entrer le nom du deuxième joueur</string>
    <string name="btn_commencer_partie">Commencer</string>
    <string name="btn_recommencer">Redémarrer</string>
    <string name="vider"> </string>
    <string name="txt_victoire">%1$s à gagner!</string>
    <string name="btn_notation">Notation Manoury</string>
    <string name="txt_tour_joueur">Tour à: %1$s (%2$s)</string>
    <string name="txt_titre_notation">Notations</string>
</resources>